# SIBR_viewer

./: .gitignore  GaussianView copy.cpp1  GaussianView copy.hpp1  conda_pkgs.txt
src/projects/gaussianviewer/apps/gaussianViewer/: main.cpp
src/projects/gaussianviewer/renderer/: CMakeLists.txt  GaussianSurfaceRenderer.cpp  GaussianSurfaceRenderer.hpp  GaussianView.cpp  GaussianView.hpp  ImageConvert.cpp  ImageConvert.hpp
src/projects/gaussianviewer/renderer/cmake/: torch.cmake
